test/cases/compile_errors/stage1/obj/shift_by_negative_comptime_integer.zig
comptime {
    var a = 1 >> -1;
    _ = a;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:18: error: shift by negative value -1
